--- a/src/app/left/left.component.html
+++ b/src/app/left/left.component.html
@@ -1,1 +1,4 @@
-<p>left works!</p>
+<h1>Behavior subject</h1>
+<ul>
+    <li *ngFor="let p of persons">{{ p.firstName }} - {{ p.lastName }}</li>
+</ul>
